Refactor test cases in TestCSBackgroundTask and TestQuery: replace string creation with character array for long values and update list creation to use Arrays.asList for better readability and compatibility.